bin/testsuite/tests/compiler/src/errors/compiler5357.swg
#global testerror "Err0037"
#[Swag.Inline, Swag.Mixin]
func toto() {}
